@@ -67,6 +67,8 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td>Variation of linkdelight
 </td></tr><tr><td>linkdelight_4</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/260978964426?ssPageName=STRK:MEWNX:IT&amp;_trksid=p3984.m1497.l2649">Link</a>
 </td><td>Another variation of linkdelight
+</td></tr><tr><td>linkdelight_5</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/ws/eBayISAPI.dll?ViewItem&amp;item=110897096126">Link</a>
+</td><td>Another variation of linkdelight
 </td></tr><tr><td>pearl</td><td>320 x 240</td><td>No</td><td><a href="http://www.pearl.de/a-HPM1184-5618.shtml">Link</a>
 </td><td>Buildin (generic) lcd-controller definition (landscape)
 </td></tr><tr><td>pearl_custom</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.pearl.de/a-HPM1184-5618.shtml">Link</a>
